서재 만드는 중

--- a/project0515/WebContent/WEB-INF/web.xml
+++ b/project0515/WebContent/WEB-INF/web.xml
@@ -27,6 +27,10 @@
     <servlet-name>appServlet</servlet-name>
     <url-pattern>*.jy</url-pattern>
   </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>appServlet</servlet-name>
+    <url-pattern>*.pdf</url-pattern>
+  </servlet-mapping>
   <filter>
     <filter-name>encodingFilter</filter-name>
     <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
